# autoagent

./: Dockerfile.base  agent.py  flake.nix  pyproject.toml
.agent/: ares-ingest-handoff.md  tron-ingest-agent-program.md  tron-ingest-autoagent-report.md  tron-ingest-llama68-final-reward.json  tron-ingest-llama68-model-spec.json  tron-ingest-parity-handoff.md
ares_ingest_autoagent/: __init__.py  ares_cli.py  artifacts.py  commands.py  gates.py  score.py
docs/: ares-ingest-autoagent.md  tron-ingest-autoagent.md
scripts/: ingest  run-tron-ingest-refinement.sh
templates/ares-ingest-harbor-task/: README.md  instruction.md  task.toml
templates/ares-ingest-harbor-task/files/: evaluate_ares_ingest.py  model_spec.json
templates/ares-ingest-harbor-task/tests/: test.sh
templates/tron-ingest-harbor-task/: README.md  instruction.md  task.toml
templates/tron-ingest-harbor-task/environment/: Dockerfile
templates/tron-ingest-harbor-task/files/: evaluate_tron_ingest.py  model_spec.json
tests/: test_ares_ingest_artifacts.py  test_ares_ingest_cli.py  test_ares_ingest_commands.py  test_ares_ingest_evaluator.py  test_ares_ingest_gates.py  test_ares_ingest_score.py  test_tron_ingest_architecture.py  test_tron_ingest_cli.py  test_tron_ingest_evaluator.py  test_tron_ingest_performance.py  test_tron_ingest_score.py  test_tron_ingest_structure.py  test_tron_ingest_tokens.py
tests/fixtures/: README.md  ares_trace_report_introspection_real.json
tron_ingest_autoagent/: __init__.py  architecture.py  ingest_cli.py  performance.py  score.py  structure.py  tokens.py
(+1 files in other folders)
