[project]
name = "autoagent"
version = "0.1.0"
description = "Autonomous agent engineering"
requires-python = ">=3.12"
dependencies = [
    "openai-agents",
    "pandas",
    "openpyxl",
    "numpy",
    "harbor",
]

[project.scripts]
ingest = "tron_ingest_autoagent.ingest_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tron_ingest_autoagent"]

[tool.uv]
package = true
